# infrared

./: Cargo.toml  README.md
.github/workflows/: ci.yml
prompts/: start.md
src/: aggregation.rs  api.rs  dashboard.rs  lib.rs  main.rs  model.rs  storage.rs
src/data_sources/: acled.rs  cloudflare.rs  hdx_hapi.rs  ioda.rs  mod.rs  reliefweb.rs
tests/: api_integration.rs
